fix y-overflow issue

--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@ body {
 }
 
 h1 {
-    margin: .5em;
+    margin: 0;
+    padding: .5em;
     font-size: 3em;
     line-height: 1;
 }
